--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiogram=3.15.0
-environs=11.2.1
-fluent.runtime=0.4.0
-fluent_compiler=0.3
-fluentogram=1.1.8
+aiogram==3.15.0
+environs==11.2.1
+fluent.runtime==0.4.0
+fluent_compiler==0.3
+fluentogram==1.1.8
